# wind-project

./: .gitignore  Dev.md  LICENSE  README.dev.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
client/: App.tsx  main.tsx
client/components/: AreaChart.tsx  BarChart.tsx  ChartContainer.tsx  DrillGround.tsx  LineChart.tsx  Modal.tsx  PieChart.tsx  RadarChart.tsx  ScatterChart.tsx  SysInfo.tsx
client/config/: contentMap.config.tsx  sidebar.config.ts  typig.config.ts
client/context/: activeItemContext.tsx
client/interface/: typing.interface.ts
client/layout/: drawer.tsx  sidebar.tsx
client/layout/sidebar/: fc_sidebar.ts  sidebar.tsx  sidebar_config.ts
client/mock/: area.mock.ts  bar.mock.ts  dualAxis.mock.ts  pie.mock.ts  radar.mock.ts  scatter.mock.ts
client/pages/: Charts.tsx  English.tsx  QRCodeGenerator.tsx  Test.tsx
client/styles/: main.css
rust/: Cargo.toml
rust/src/: main.rs
server/prisma/: prisma.server.ts  schema.prisma
server/src/: app.module.ts
server/src/accounts/: accounts.controller.ts  accounts.module.ts  accounts.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mods/: commands.rs  hardinfo.rs  sqlite.rs  typing.rs
