[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "wind-project"
version = "0.1.0"

[[bin]]
name = "wind-project"
path = "src/main.rs"

[lib]
# 这个配置对 Android/iOS 至关重要
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
rusqlite = {version = "0.39.0", features = ["bundled"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = {version = "1", features = ["full"] }
sysinfo = "0.38.4"
warp = "0.4.2"
